examples/test/testpolicy160.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy160
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key17: value18
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value46
          key34: value49
          key9: value3
      podSelector:
        matchLabels:
          key20: value35
          key17: value39
          key16: value11
